# helios

./: .als.json  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  README.txt  WildfireAIReadme.txt  alire.toml  build.bat  build.dockerfile  build_hal_fw.sh  build_neorv32.bat  build_neorv32_project.sh  dependencies.sh  helios.gpr  helios_common.gpr  windows_dependencies.bat
.devcontainer/: devcontainer.json
BasysRiscV/: neorv32_test_setup_bootloader.vhd
GroundStation/: jpg_to_c.py  test_jpeg.c
docs/: Framebuffer_Demo.md  Framebuffer_Olivier_Demo.md  Getting_Started.md  I2C_Notes.md  Logic_Analyzer_Guide.md  TTLSerialCamera_UART.md
ground_station/: configure_usb.ps1  coordinate_sender.py  launch_listener.bat  launch_listener.ps1  launch_listener.sh  listen.py  pyproject.toml
ground_station/ai/: README.md  pyproject.toml  train_wildfire_model.py
ground_station/ai/output/: .gitignore
ground_station/ai_wildfire_prediction/: .gitattributes  ai-wildfire-prediction.dockerfile  prediction.py  pyproject.toml
ground_station/ai_wildfire_prediction/data/: firms_ee_join_clean.csv
ground_station_bak/: launch_listener.ps1  listener.dockerfile  shared_usb_devices.sh
helios/src/: helios.adb
helios_env/: .gitignore  alire.toml
rtl/: basys3_a7_test_setup.xdc  build.tcl  fb_bram_rgb332_160x120.vhd  helios.vhdl  helios_framebuffer.vhdl  helios_vga.vhdl  helios_vga_timer.vhdl  helios_vga_xbus.vhdl  program.tcl  program_board.tcl  vga_640x480_safe.vhd  vga_640x480_timing.vhd  vga_fb_integration_stub.vhd  vga_scanout_rgb332.vhd  vram_rgb332_dp.vhd  vram_wb_slave.vhd  vram_xbus_slave.vhd
src/: camera.adb  camera.ads  comms.adb  comms.ads  coordinate_listener.adb  coordinate_listener.ads  gnat_exit.adb  gnat_exit.ads  helios.adb  image_store.ads  logger.adb  logger.ads  pwm_api.adb  pwm_api.ads  twi.adb  twi.ads  vga.adb  vga.ads  vga_fb.adb  vga_fb.ads
tests/: alire.toml  tests.gpr
tools/: README.md  build_framebuffer_demo.ps1
vga_fb/: README.md  TRACEABILITY.md  VGA_Framebuffer_Software_Interface_Recovery_Scope.md
(+48 files in other folders)
