[project]
name = "ai-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

requires-python = ">=3.12"
# Dependencies are intentionally scoped to offline tabular model training.
# The Node pipeline remains the canonical runtime path; this Python project is
# for comparing stronger sklearn models against the Node baseline artifact.
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# This directory is not packaged as an installable Python library. Poetry is
# used only to lock and install the training environment inside the container.
package-mode = false
