[project]
name = "ai-wildfire-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Calvin Nordstrom",email = "can5480@psu.edu"}
]

requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
